# MARLPO

./: .gitignore  MANIFEST.in  README.md  draw_learning_curve.ipynb  eval.ipynb  plot.ipynb  plot2.ipynb  process_eval_results.ipynb  pyproject.toml  setup.py
evaluate_results/: ippo_evaluate_results.csv
marlpo/: _train_multi_agent_metadrive.py  _tune_multi_agent_metadrive.py  algo_aratnppo.py  algo_arccppo.py  algo_arippo.py  algo_arppo.py  algo_arppo_no_use.py  algo_ccppo.py  algo_ippo.py  algo_sappo.py  algo_scppo.py  algo_svoppo.py  callbacks.py  connectors.py  continue_train_soco.py  draw_trajectory.py  eval.py  eval_convenient.py  math.ipynb  model_arippo.py  record_trajectory.py  sample_collector.py  test_convert_env.py  test_gymnasium.py  test_marl.py  test_ppo.py  test_rllib_simple_train.py  test_rollout_worker.py  test_test.py  train_arccppo.py  train_arippo.py  train_ccppo.py  train_copo.py  train_ippo.py  train_ippo_cc.py  train_ippo_dc.py  train_ippo_rs.py  train_irat.py  train_metadrive_single.py  train_ppo_no_value_clip.py  (+9 more)
marlpo/algo/: __init__.py  algo_ccppo.py  algo_copo.py  algo_ippo.py  algo_ippo_dc.py  algo_ippo_rs.py  algo_irat.py  algo_scpo.py  algo_soco.py  algo_soco_dc.py  algo_soco_dq.py  utils.py
marlpo/env/: __init__.py  _multi_agent_metadrive.py  color2name.py  env_copo.py  env_utils.py  env_wrappers.py  other_envs.py
marlpo/eval/: recoder.py
marlpo/evaluation/: DrawEvalResult.ipynb  recoder.py
marlpo/models/: ar_model.py  sa_model.py  sc_model.py  soco_dq_model.py  soco_model.py  svo_model.py
marlpo/modules/: __init__.py  (+6 more)
(+21 files in other folders)
