# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marlpo"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [{name = "Jimmy Deng", email = "jimmydengpeng@gmail.com"}]
maintainers = [{name = "Jimmy Deng", email = "jimmydengpeng@gmail.com"}]
keywords = []
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PyYAML",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = []

[project.urls]
homepage = "https://github.com/jimmydengpeng/"
